standards/gnds-2.0/test/c/src/v2.0/fpy/ProductYield.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// ProductYield is the basic handle type in this file. Example:
//    // Create a default ProductYield object:
//    ProductYield handle = ProductYieldDefault();
// Functions involving ProductYield are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TEST_V2_0_FPY_PRODUCTYIELD
#define C_INTERFACE_TEST_V2_0_FPY_PRODUCTYIELD

#include "GNDStk.h"
#include "v2.0/fpy/Nuclides.h"
#include "v2.0/fpy/ElapsedTimes.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ProductYieldClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ ProductYield
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ProductYieldClass *ProductYield;

// --- Const-aware handles.
typedef const struct ProductYieldClass *const ConstHandle2ConstProductYield;
typedef       struct ProductYieldClass *const ConstHandle2ProductYield;
typedef const struct ProductYieldClass *      Handle2ConstProductYield;
typedef       struct ProductYieldClass *      Handle2ProductYield;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstProductYield
ProductYieldDefaultConst();

// +++ Create, default
extern_c Handle2ProductYield
ProductYieldDefault();

// --- Create, general, const
extern_c Handle2ConstProductYield
ProductYieldCreateConst(
   const XMLName label,
   ConstHandle2ConstNuclides nuclides,
   ConstHandle2ConstElapsedTimes elapsedTimes
);

// +++ Create, general
extern_c Handle2ProductYield
ProductYieldCreate(
   const XMLName label,
   ConstHandle2ConstNuclides nuclides,
   ConstHandle2ConstElapsedTimes elapsedTimes
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ProductYieldAssign(ConstHandle2ProductYield This, ConstHandle2ConstProductYield from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ProductYieldDelete(ConstHandle2ConstProductYield This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ProductYieldRead(ConstHandle2ProductYield This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ProductYieldWrite(ConstHandle2ConstProductYield This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ProductYieldPrint(ConstHandle2ConstProductYield This);

// +++ Print to standard output, as XML
extern_c int
ProductYieldPrintXML(ConstHandle2ConstProductYield This);

// +++ Print to standard output, as JSON
extern_c int
ProductYieldPrintJSON(ConstHandle2ConstProductYield This);


// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ProductYieldLabelHas(ConstHandle2ConstProductYield This);

// +++ Get
// +++ Returns by value
extern_c XMLName
ProductYieldLabelGet(ConstHandle2ConstProductYield This);

// +++ Set
extern_c void
ProductYieldLabelSet(ConstHandle2ProductYield This, const XMLName label);


// -----------------------------------------------------------------------------
// Child: nuclides
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ProductYieldNuclidesHas(ConstHandle2ConstProductYield This);

// --- Get, const
extern_c Handle2ConstNuclides
ProductYieldNuclidesGetConst(ConstHandle2ConstProductYield This);

// +++ Get, non-const
extern_c Handle2Nuclides
ProductYieldNuclidesGet(ConstHandle2ProductYield This);

// +++ Set
extern_c void
ProductYieldNuclidesSet(ConstHandle2ProductYield This, ConstHandle2ConstNuclides nuclides);


// -----------------------------------------------------------------------------
// Child: elapsedTimes
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ProductYieldElapsedTimesHas(ConstHandle2ConstProductYield This);

// --- Get, const
extern_c Handle2ConstElapsedTimes
ProductYieldElapsedTimesGetConst(ConstHandle2ConstProductYield This);

// +++ Get, non-const
extern_c Handle2ElapsedTimes
ProductYieldElapsedTimesGet(ConstHandle2ProductYield This);

// +++ Set
extern_c void
ProductYieldElapsedTimesSet(ConstHandle2ProductYield This, ConstHandle2ConstElapsedTimes elapsedTimes);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif